# Investimate.ai

./: .gitignore  CORRECT_AZURE_CENTRAL_INDIA_IPS.md  DATABASE_FIX_GUIDE.md  DEPLOYMENT.md  FREE_MIGRATION_COMPLETE.md  PRODUCTION_CHECKLIST.md  README.md  azure-cli-commands.txt  clean_and_push.bat  clean_git_history.bat  clean_history.py  clean_specific_files.py  database_connection_test.py  deploy.ps1  deploy.sh  fix_database_config.sh  fix_github_push.bat  remove_secrets.py  requirements.txt  test_supabase_connections.py
Backend/: .deployment  .env.example  AZURE_CONFIG_COMPLETE.md  AZURE_DEPLOYMENT_GUIDE.md  Dockerfile  ML_DEPLOYMENT_GUIDE.md  app.py  application.py  azure.yaml  azure_deployment_updated.py  azure_startup.sh  bin.py  build.sh  check_azure_status.py  complete_azure_setup.py  configure_azure_env.ps1  deploy.cmd  deploy.sh  fix_azure_deployment.py  fix_azure_deployment.py.new  fix_dependency_installation.py  init_database.py  main.py  manual_azure_config.md  minimal_app.py  populate_file_size.py  prebuild.sh  pyproject.toml  railway.toml  remove_secrets.py  render.yaml  requirements.txt  requirements_minimal.txt  requirements_production.txt  secdat.py  start.sh  startup.sh  startup.txt  startup_linux.sh  startup_utils.py  (+4 more)
Backend/Ai_engine/: annual_report_summarizer.py  combine_summaries.py  concall_summarizer.py  forum_summarizer.py  free_summarizer.py
Backend/Auth/: auth.py  database.py  database_lazy.py  models.py  schemas.py  services.py  supabase_utils.py
Backend/Enhanced_preprocessing/: enhance_annual.py  enhance_concall.py  enhance_forum.py
(+51 files in other folders)
